# agent-me

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATE.md  pyproject.toml
.cursor/skills/parallel-agent-execution/: SKILL.md  dispatch-contract.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  labels-sync.yml  pr-size.yml  release-drafter.yml  stale.yml
configs/: .env.example
deploy/: agent-me-bridge.service  agent-me-dashboard.service  agent-me-funnel.service  agent-me-watch.service
design/: approval-hook-design.md  dashboard-design.md  dashboard-pending-panel.md  deploy-on-brev.md  deploy-on-host.md  deploy-proxy-on-host.md  maas-mcp-catalog.md  mcp-authentication.md  orchestrator-routing.md  reverse-proxy-config.md  session-persistence.md  setup-on-fresh-host.md  slack-app-setup.md
discussions/: 2026-05-09-github-setup.md  2026-05-09-kickoff.md  2026-05-10-colossus-deploy-keychain-trick.md  2026-05-10-fanout-and-session-persistence.md  2026-05-10-pa-revert.md  2026-05-10-pa-vs-custom-comparison.md  2026-05-10-phase-2a-complete-daily-brief-kickoff.md  2026-05-10-phase-2b-and-log-viewer.md  2026-05-10-phase-4-dashboard-draft.md  2026-05-10-phase-4-dashboard.md  2026-05-10-session-end-pa-hybrid-ready.md  2026-05-10-slack-decisions.md  2026-05-11-agent-me-avatar.md  2026-05-11-brief-calendar-and-model-free-email.md  2026-05-11-codex-first-migration.md  2026-05-11-end-to-end-deploy-walkthrough.md  2026-05-11-proxy-host-deployed-caddy.md  2026-05-11-reverse-proxy-pivot.md  2026-05-12-auto-sfa.md  2026-05-12-brev-fill-screenshot-flow.md  2026-05-12-daily-brief-source-hardening.md  2026-05-14-auto-sfa-cycle-resolver-and-slack-defaults.md  2026-05-14-dashboard-brief-ui-state.md  2026-05-16-auto-sfa-mcp.md  ideas.md
scripts/: agent-me-watch.sh  bootstrap.sh  brev-browser-auth.sh  extract-reauth-urls.py  install-codex-mcp-env-on-host.sh  install-dashboard.sh  install-systemd.sh  kill-bridge.sh  mac-reauth-and-sync.sh  open-auth-urls.py  reauth-mcps.mjs  reauth-mcps.sh  render-agent-me-avatar.py  setup-codex-mcps.sh  setup-mcps.sh  sync-mcp-creds-to-host.sh  tail-log.sh
services/slack-bridge/: .gitignore  README.md  index.js  package.json  pnpm-lock.yaml
services/slack-bridge/db/: schema.sql
src/agent_me/: auto_sfa.py  auto_sfa_history.py  auto_sfa_mcp.py  auto_sfa_mcp_store.py  codex_app_server.py  mcp_tokens.py  parallel_queue.py
src/agent_me/dashboard/: __init__.py  app.py  auth.py  auto_sfa_runner.py  brief_runner.py  log_sources.py  mock_pending.py  state_reader.py
src/agent_me/dashboard/static/: app.css  app.js
src/agent_me/dashboard/templates/: auto_sfa.html  base.html  index.html  login.html  logs.html  mcp_setup.html  ops.html  source.html
src/agent_me/dashboard/templates/partials/: nav.html
src/agent_me/scripts/: daily_brief.py  reauth_codex_mcps.py  reauth_mcps.py
src/agent_me/slack_bridge/: app.py  approvals.py
tests/: conftest.py  test_app.py  test_approvals.py  test_auth.py  test_auto_sfa.py  test_auto_sfa_mcp.py  test_auto_sfa_mcp_store.py  test_daily_brief.py  test_log_sources.py  test_mcp_tokens.py  test_parallel_queue.py  test_slack_bridge_codex_args.py  test_state_reader.py
