[project]
name = "agent-me"
version = "0.1.0"
description = "myself, but in agent mode — public-shareable framework for a 24/7 personal AI OS"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thanh Phan", email = "thanhphantuan1110@gmail.com" }]
requires-python = ">=3.12"

# Runtime deps. Helpers under scripts/ are stdlib-only and don't pull these in;
# they live here for the Slack bridge we're porting from Node to Python.
dependencies = [
    "slack-bolt>=1.20",   # Slack Socket Mode SDK (Python)
    "aiohttp>=3.9",       # required by slack_bolt async socket mode adapter
    "httpx>=0.27",        # async HTTP for any non-Slack API calls
    "pydantic>=2.7",      # config + payload models
    "python-dotenv>=1.0", # load configs/.env
    "structlog>=24.1",    # structured logging (pino-equivalent)
    # Phase 4 — dashboard (additive; bridge doesn't import these)
    "starlette>=0.40",    # ASGI framework for the dashboard
    "uvicorn[standard]>=0.30",  # ASGI server (used only by `agent-me-dashboard`)
    "jinja2>=3.1",        # templates
    "itsdangerous>=2.2",  # signed cookies for dashboard auth
    "sse-starlette>=2.1", # SSE response helper
    "mcp>=1.27.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-asyncio>=0.23",  # async fixtures + test funcs
    "httpx>=0.27",            # already a runtime dep — re-list for clarity
]

[project.scripts]
# Console scripts — run via `uv run <name>` after `uv sync`.
agent-me-bridge    = "agent_me.slack_bridge.app:main"
agent-me-reauth    = "agent_me.scripts.reauth_mcps:main"
agent-me-codex-reauth = "agent_me.scripts.reauth_codex_mcps:main"
agent-me-brief     = "agent_me.scripts.daily_brief:main"
agent-me-dashboard = "agent_me.dashboard.app:main"
agent-me-parallel-queue = "agent_me.parallel_queue:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_me"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length is enforced by formatter

[tool.pyright]
include = ["src", "scripts"]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:starlette.*",
]
